# hypsometric-map

./: .gitignore  LICENSE  README.md  converter.py  pyproject.toml
docs/: gradient.html
src/: color_schemes.py  converter.py  web_mercator.py
tests/: test.py  test_web_mercator.py
